--- a/Presentation/Settings.tex
+++ b/Presentation/Settings.tex
@@ -25,6 +25,7 @@
 \let\oldCite\cite
 \renewcommand{\cite}[1]{\textsuperscript{[\oldCite{#1}]}}
 \renewcommand*{\nameyeardelim}{\addcomma\space}
+\newcommand{\mycite}[1]{[\oldCite{#1}]}
 
 \begin{comment}
 \tikzset{
