--- a/Presentation/Settings.tex
+++ b/Presentation/Settings.tex
@@ -21,6 +21,7 @@
 \newcommand{\dV}{\int\dd^4x}
 \newcommand{\id}{\mathds{1}}
 \newcommand{\degree}{^\circ}
+\newcommand{\Utriang}{U_\bigtriangleup}
 
 \let\oldCite\cite
 \renewcommand{\cite}[1]{\textsuperscript{[\oldCite{#1}]}}
