Added Simulation results and conclusions.

--- a/Presentation/Bibliography.bib
+++ b/Presentation/Bibliography.bib
@@ -46,6 +46,19 @@
     year = "1987"
 }
 
+@article{Celmaster:1983vy,
+      author         = "Celmaster, William",
+      title          = "{The Average Plaquette of SU(2) Gauge Theory on a Body
+                        Centered Hypercubic Lattice}",
+      journal        = "Phys. Rev.",
+      volume         = "D28",
+      pages          = "2076",
+      doi            = "10.1103/PhysRevD.28.2076",
+      year           = "1983",
+      reportNumber   = "NUB 2601",
+      SLACcitation   = "%%CITATION = PHRVA,D28,2076;%%",
+}
+
 @online{f4image,
       author  = "Wikipedia",
       yeear   = "2010",
