--- a/Presentation/Libraries.tex
+++ b/Presentation/Libraries.tex
@@ -8,6 +8,7 @@
 \usepackage{tikz}
 \usepackage{cancel}
 \usepackage{pifont}
+\usepackage{caption}
 \usepackage[nodayofweek,level]{datetime}
 \usepackage{tikz}
 \usetikzlibrary{arrows,shapes}
