Added plaq plot from literature.

--- a/Presentation/Libraries.tex
+++ b/Presentation/Libraries.tex
@@ -9,6 +9,7 @@
 \usepackage{cancel}
 \usepackage{pifont}
 \usepackage{caption}
+\usepackage{subcaption}
 \usepackage[nodayofweek,level]{datetime}
 \usepackage{tikz}
 \usetikzlibrary{arrows,shapes}
